# zyxt

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  errors.md  library.md  package.sh  pom.xml  rustfmt.toml  syntax.md
.github/: dependabot.yml
.github/workflows/: cargo-upgrade.yaml
egs/: 0_hello_world.zts  1_basic_ops.s.xt  1_basic_ops.zts  2_control_flow.s.xt  2_control_flow.zts  3_procs_fns_and_scope.s.xt  3_procs_fns_and_scope.zts  4_classes_and_structs.s.xt  4_classes_and_structs.zts
java/: package.sh  pom.xml
java/src/main/java/io/github/iiiii7d/zyxtlang/: Lexer.java  Main.java  Utils.java
java/src/main/resources/: test.zy
proptest-regressions/: lexer.txt
rs/: Cargo.toml  test.ztc  test.zts
rs/src/: checker.rs  errors.rs  instructor.rs  interpret.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs  syntax.rs  typechecker.rs
rs/src/objects/: deferstack.rs  element.rs  errors.rs  heap.rs  interpreter_data.rs  logger.rs  mod.rs  position.rs  stack.rs  token.rs  token_entries.rs  typeobj.rs  value.rs  variable.rs  varstack.rs
rs/src/objects/value/: add.rs  concat.rs  div.rs  eq.rs  gt.rs  logic.rs  lt.rs  modulo.rs  mul.rs  sub.rs  typecast.rs  unary.rs  utils.rs
rs/src/syntax/: element.rs  lexing.rs  mod.rs  parsing.rs  token.rs  token_entries.rs  typeobj.rs
src/: file_importer.rs  instructor.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs
src/ast/: argument.rs  binary_opr.rs  block.rs  call.rs  class.rs  comment.rs  condition.rs  declare.rs  defer.rs  delete.rs  ident.rs  if.rs  literal.rs  member.rs  mod.rs  preprocess.rs  procedure.rs  return.rs  set.rs  unary_opr.rs
src/errors/: interpreter.rs  lexer.rs  mod.rs  parser.rs  type_check.rs  typecheck.rs
src/io/github/iiiii7d/zylang/: Main.java
src/lexer/: buffer.rs  comments.rs  mod.rs  number.rs  symbol.rs  text_literal.rs  whitespace.rs  word.rs
src/main/java/io/github/iiiii7d/zylang/: Lexer.java  Main.java  Utils.java
src/objects/: element.rs  interpreter_data.rs  position.rs  state_tracker.rs  token.rs  typeobj.rs  value.rs
src/objects/value/: add.rs  div.rs  logic.rs  lt.rs  mul.rs  unary.rs
src/parser/: assignment_opr.rs  bin_opr.rs  buffer.rs  class_struct.rs  declaration.rs  delete.rs  if.rs  mod.rs  parentheses.rs  preprocess_defer.rs  proc_fn.rs  return.rs  un_opr.rs  unparen_call.rs  var_literal_call.rs
src/primitives/: bool_t.rs  f16_t.rs  f32_t.rs  f64_t.rs  i128_t.rs  i16_t.rs  i32_t.rs  i64_t.rs  i8_t.rs  ibig_t.rs  isize_t.rs  macros.rs  mod.rs  proc_t.rs  str_t.rs  type_t.rs  u128_t.rs  u16_t.rs  u32_t.rs  u64_t.rs  u8_t.rs  ubig_t.rs  unit_t.rs  usize_t.rs  utils.rs
src/types/: element.rs  errors.rs  frame_data.rs  interpreter_data.rs  mod.rs  position.rs  printer.rs  sym_table.rs  token.rs  type.rs  typeobj.rs  value.rs
src/types/element/: binary_opr.rs  block.rs  call.rs  class.rs  comment.rs  declare.rs  defer.rs  delete.rs  ident.rs  if.rs  literal.rs  preprocess.rs  procedure.rs  return.rs  set.rs  unary_opr.rs
src/types/typeobj/: bool_t.rs  f16_t.rs  f32_t.rs  f64_t.rs  i128_t.rs  i16_t.rs  i32_t.rs  i64_t.rs  i8_t.rs  ibig_t.rs  isize_t.rs  macros.rs  proc_t.rs  str_t.rs  type_t.rs  u128_t.rs  u16_t.rs  u32_t.rs  u64_t.rs  u8_t.rs  ubig_t.rs  unit_t.rs  usize_t.rs
src/types/value/: add.rs  bool_t.rs  concat.rs  div.rs  eq.rs  f16_t.rs  f32_t.rs  f64_t.rs  gt.rs  i128_t.rs  i16_t.rs  i32_t.rs  i64_t.rs  i8_t.rs  ibig_t.rs  isize_t.rs  logic.rs  lt.rs  macros.rs  modulo.rs  mul.rs  str_t.rs  sub.rs  type_t.rs  typecast.rs  u128_t.rs  u16_t.rs  u32_t.rs  u64_t.rs  u8_t.rs  ubig_t.rs  unary.rs  usize_t.rs
src/types/value/old/: div.rs  lt.rs  mod.rs  sub.rs  unary.rs
tests/: lexer.rs  parser.rs
v/: errors.v  lexer.v  main.v  parser.v  syntax.v  test.ztc  utils.v
