[package]
name = "zyxt"
version = "0.1.0"
edition = "2021"
authors = ["7d"]
description = "Toolset for Zyxtlang."

[[bin]]
name = "zyxt"
path = "src/main.rs"

[lib]
name = "zyxt"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owo-colors = "^3.5.0"
regex = "^1.7.3"
lazy-regex = "^2.5.0"
clap = { version = "^4.2.1", features = ["derive"] }
rustyline = "^11.0.0"
dirs = "^5.0.0"
backtrace = "^0.3.67"
num = "^0.4.0"
num-traits = "^0.2.15"
half = { version = "^2.2.1", features = ["num-traits"] }
enum-as-inner = "^0.5.1"
itertools = "^0.10.5"
once_cell = "^1.17.1"
smol_str = "^0.1.24"
maplit = "^1.0.2"
color-eyre = "^0.6.2"
tracing = "^0.1.37"
tracing-subscriber = { version = "^0.3.16", features = ["env-filter", "fmt"] }
tracing-error = "^0.2.0"

[dev-dependencies]
proptest = "^1.1.0"
pretty_assertions = "^1.3.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
