[package]
name = "zyxt"
version = "0.1.0"
edition = "2021"
authors = ["7d"]
description = "Toolset for Zyxtlang."

[[bin]]
name = "zyxt"
path = "src/main.rs"

[lib]
name = "zyxt"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owo-colors = "^4.0.0"
regex = "^1.8.4"
lazy-regex = "^3.0.0"
clap = { version = "^4.3.8", features = ["derive"] }
rustyline = "^14.0.0"
dirs = "^5.0.1"
backtrace = "^0.3.67"
num = "^0.4.0"
num-traits = "^0.2.15"
half = { version = "^2.3.0", features = ["num-traits"] }
enum-as-inner = "^0.6.0"
itertools = "^0.13.0"
once_cell = "^1.18.0"
smol_str = "^0.3.1"
maplit = "^1.0.2"
color-eyre = "^0.6.2"
tracing = "^0.1.37"
tracing-subscriber = { version = "^0.3.17", features = ["env-filter", "fmt"] }
tracing-error = "^0.2.0"
itoa = "^1.0.6"
ryu = "^1.0.13"

[dev-dependencies]
proptest = "^1.2.0"
pretty_assertions = "^1.3.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
