[package]
name = "zyxt"
version = "0.1.0"
edition = "2021"
authors = ["7d"]
description = "Toolset for Zyxtlang."

[[bin]]
name = "zyxt"
path = "src/main.rs"

[lib]
name = "zyxt"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owo-colors = "^4.2.1"
regex = "^1.11.1"
lazy-regex = "^3.4.1"
clap = { version = "^4.5.38", features = ["derive"] }
rustyline = "^15.0.0"
dirs = "^6.0.0"
backtrace = "^0.3.75"
num = "^0.4.3"
num-traits = "^0.2.19"
half = { version = "^2.6.0", features = ["num-traits"] }
enum-as-inner = "^0.6.1"
itertools = "^0.14.0"
once_cell = "^1.21.3"
smol_str = "^0.3.2"
maplit = "^1.0.2"
color-eyre = "^0.6.4"
tracing = "^0.1.41"
tracing-subscriber = { version = "^0.3.19", features = ["env-filter", "fmt"] }
tracing-error = "^0.2.1"
itoa = "^1.0.15"
ryu = "^1.0.20"

[dev-dependencies]
proptest = "^1.6.0"
pretty_assertions = "^1.4.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
