[package]
name = "zyxt"
version = "0.0.0"
edition = "2021"
authors = ["7d"]
description = "Toolset for Zyxtlang."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
regex = "1.5.4"
clap = { version = "3.1.2", features = ["derive"] }
rustyline = "9.1.2"
dirs = "4.0.0"
backtrace = "0.3.65"
num = "0.4.0"
half = "1.8.2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true