[package]
name = "zyxt"
version = "0.0.0"
edition = "2021"
authors = ["7d"]
description = "Toolset for Zyxtlang."

[[bin]]
name = "zyxt"
path = "src/main.rs"

[lib]
name = "zyxt"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "~0.12.1"
regex = "~1.6.0"
clap = { version = "~3.2.16", features = ["derive"] }
rustyline = "~10.0.0"
dirs = "~4.0.0"
backtrace = "~0.3.65"
num = "~0.4.0"
half = "~2.1.0"
enum-as-inner = "~0.5.0"
unicode-segmentation = "~1.9.0"
itertools = "~0.10.3"
lazy_static = "~1.4.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
